--- a/style.css
+++ b/style.css
@@ -1,51 +1,64 @@
+/*=== basics ===*/
 body {	
+	overflow: hidden;
 	margin: 0;
 	padding: 0;
 }
 
 .containerPrincipal {
 	position: relative;
-	overflow: hidden;
 	width: 100vw;
 	height: 100vh;
-	animation: lasHoras 10s;
+	animation: lasHoras 24s;
 	animation-iteration-count: infinite;
 	animation-timing-function: linear;
 }
 
-.containerA {
+
+/*=== clouds ===*/
+.allClouds {
 	position: relative;
 	width: 100vw;
 	height: 100vh;
 }
 
+.containerClouds {
+	position: absolute;
+	left: 5vw;
+	animation: clouds 20s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+}
+
+.containerClouds-bis {
+	position: absolute;
+	left: 7vw;
+	animation: dif-clouds 20s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+}
 
 .clouds {
 	position: absolute;
 	width: 100px;
 	height: 60px;
-	animation: clouds 10s;
-	animation-delay: 0.2s;
-	animation-direction: alternate-reverse;
-	animation-iteration-count: infinite;
-	animation-timing-function: linear;
 }
 
 .cloud-1 {
 	transform: scaleX(-1);
-	left: 8vw;
-	top: 6vh;
+	left: 9vw;
+	top: 10vh;
 }
 
 .cloud-2 {
-	left: 28vw;
-	top: 17vh; 
+	left: 25vw;
+	top: 20vh; 
 }
 
 .cloud-3 {
 	transform: scaleX(-1);
-	left: 47vw;
-	top: 8vh;
+	left: 45vw;
+	top: 9vh;
 }
 
 .cloud-4 {
@@ -53,9 +66,11 @@ body {
 	top: 15vh;
 }
 
-.cloud-5 {
-	left: -20vw;
-	top: 20vh;
+
+/*=== sun - moon - seagulls ===*/
+.sunAndMoon {
+	width: 100vw;
+	height: 100vh;
 }
 
 .sun {
@@ -64,24 +79,39 @@ body {
 	height: 190px;
 	right: 2vw;
 	top: 2vh;
-	animation: sun 10s;
+	animation: sun 24s;
 	animation-iteration-count: infinite;	
 	animation-timing-function: linear;	
+}
+
+
+.seagull {
+	position: absolute;
+	width: 520px;
+	height: 200px;
+	top: 30vh;
+	left: 15vw;
+	animation: seagull 24s;
+	animation-delay: 1s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
 }
 
 .moon {
 	opacity: 0;
 	position: absolute;
-	width: 140px;
+	width: 145px;
 	height: 150px;
 	left: 3vw;
 	top: 4vh;	
-	animation: moon 10s;
+	animation: moon 24s;
 	animation-iteration-count: infinite;
 	animation-timing-function: linear;
 }
 
-.containerB {
+
+/*=== forest ===*/
+.containerForest {
 	position: absolute;
 	width: 100vw;
 	bottom: 10px;
@@ -92,12 +122,14 @@ body {
 	width: 85%;
 }
 
-.containerC {
+
+/*=== flowers ===*/
+.containerFlowers {
 	position: absolute;
 	text-align: center;
 	width: 100vw;
 	bottom: 15px;
-	animation: flowers 10s;
+	animation: flowers 24s;
 	animation-iteration-count: infinite;
 	animation-timing-function: linear;
 }
@@ -113,6 +145,8 @@ body {
  margin: 0px 15px;
 }
 
+
+/*=== grass ===*/
 .grass {
 	position: absolute;
 	width: 86%;
