--- a/keyframes.css
+++ b/keyframes.css
@@ -59,7 +59,7 @@
 }
 
 @keyframes elegidas {
-	0%, 100% {	bottom: 20px;	}
-	50% {	bottom: 40px;	}
-	80% {	bottom: 20px;}
+	0%, 100% {	bottom: 10vh;	}
+	50% {	bottom: 15vh;	}
+	80% {	bottom: 10vh;}
 }
